[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["query"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
http-body-util = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
mongodb = "3.1"
futures = "0.3"
